# starlight-c

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
.run/: Dioxus Serve Web.run.xml
src/: main.rs  route.rs
src/components/: control_plan_side_bar.rs  mod.rs  nav_bar.rs
src/layouts/: mod.rs
src/pages/: mod.rs
